# PIC_IN_C

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: head.h
space_test/: imread
src/: char_and_double.c  demo2Main.c  denoiseImageKSVD.c  denoiseImageKSVD_head_test.c  extract_columns.c  free_all.c  im2col.c  ind2sub.c  my_im2col.c  randperm.c  repmat.c  s_gets.c  to_randn.c  zeros.c
